Updated examples to new config

--- a/Propagate_different_EBL.ipynb
+++ b/Propagate_different_EBL.ipynb
@@ -23,12 +23,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PrinceDB::__init__(): Opening HDF5 file prince_db_05.h5\n"
+      "CUPY not found for GPU support. Degrading to MKL.\n"
      ]
     }
    ],
    "source": [
-    "import prince_config\n",
+    "import prince.config\n",
     "from prince import core, util, photonfields, cross_sections\n",
     "from prince import util as pru"
    ]
@@ -75,66 +75,13 @@
      "output_type": "stream",
      "text": [
       "CompositeCrossSection::_join_models(): Attempt to join 2 models.\n",
-      "TabulatedCrossSection::_load(): Load tabulated cross sections\n",
-      "TabulatedCrossSection::_load(): Egrid loading finished\n",
-      "TabulatedCrossSection::_load(): Data file loading finished\n",
-      "TabulatedCrossSection::set_range(): Range set to 1.00e-03 - 1.00e+00\n",
-      "TabulatedCrossSection::_load(): Finished initialization\n",
-      "TabulatedCrossSection::_reduce_channels(): Integrating out species with lifetime smaller than inf\n",
-      "TabulatedCrossSection::_reduce_channels(): Before optimization, the number of known primaries is 405 with in total 49386 inclusive channels\n",
-      "SophiaSuperposition::_load(): Loading SOPHIA cross sections from file.\n",
-      "SophiaSuperposition::set_range(): Range set to 1.58e-01 - 1.00e+08\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/decays.py:522: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  (E_mesh - Emax)**2 - boost**2 * mass_el**2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TabulatedCrossSection::follow_chain():  daughter 5625 unknown, forcing beta decay. Not Implemented yet!!\n",
-      "TabulatedCrossSection::follow_chain():  daughter 5627 unknown, forcing beta decay. Not Implemented yet!!\n",
-      "TabulatedCrossSection::_reduce_channels(): After optimization, the number of known primaries is 84 with in total 3892 inclusive channels\n",
-      "TabulatedCrossSection::_reduce_channels(): Cache used for decays, CacheInfo(hits=16952, misses=443, maxsize=512, currsize=443)\n",
-      "TabulatedCrossSection::set_range(): Range set to 1.00e-03 - 1.38e-01\n",
-      "SophiaSuperposition::_load(): Loading SOPHIA cross sections from file.\n",
-      "SophiaSuperposition::set_range(): Range set to 1.58e-01 - 1.00e+08\n",
-      "SophiaSuperposition::set_range(): Range set to 1.58e-01 - 1.00e+08\n",
-      "CompositeCrossSection::set_range(): Range set to 1.00e-03 - 1.00e+08\n",
-      "CompositeCrossSection::_reduce_channels(): Integrating out species with lifetime smaller than inf\n",
-      "CompositeCrossSection::_reduce_channels(): Before optimization, the number of known primaries is 84 with in total 3488 inclusive channels\n",
-      "CompositeCrossSection::_reduce_channels(): After optimization, the number of known primaries is 84 with in total 4328 inclusive channels\n",
-      "CompositeCrossSection::_reduce_channels(): Cache used for decays, CacheInfo(hits=34574, misses=34, maxsize=512, currsize=34)\n",
       "PriNCeRun::__init__(): initialising Energy grid\n",
-      "ContinuousAdiabaticLossRate::__init__(): creating instance\n",
-      "ContinuousPairProductionLossRate::__init__(): creating instance\n",
-      "ContinuousPairProductionLossRate::__init__(): using 400 steps in xi\n",
-      "ContinuousAdiabaticLossRate::__init__(): creating instance\n",
-      "ContinuousPairProductionLossRate::__init__(): creating instance\n",
-      "ContinuousPairProductionLossRate::__init__(): using 400 steps in xi\n",
-      "PhotoNuclearInteractionRate::__init__(): creating instance\n",
-      "PhotoNuclearInteractionRate::_estimate_batch_matrix(): Batch matrix dimensions are 3567656x72\n",
-      "PhotoNuclearInteractionRate::_estimate_batch_matrix(): Memory usage: 1959.77197265625 MB\n",
-      "CompositeCrossSection::resp(): First Call, creating instance of ResponseFunction now\n",
-      "ResponseFunction::_precompute_interpolators(): Computing interpolators for response functions\n",
       "PhotoNuclearInteractionRate::_init_matrices(): Inclusive interpolator not found for (302, 302)\n",
       "PhotoNuclearInteractionRate::_init_matrices(): Inclusive interpolator not found for (301, 301)\n",
       "PhotoNuclearInteractionRate::_init_matrices(): Inclusive interpolator not found for (201, 201)\n",
-      "PhotoNuclearInteractionRate::_init_matrices(): Batch matrix shape: (1728152, 72)\n",
-      "PhotoNuclearInteractionRate::_init_matrices(): Batch rows shape: (1728152,)\n",
-      "PhotoNuclearInteractionRate::_init_matrices(): Batch cols shape: (1728152,)\n",
-      "PhotoNuclearInteractionRate::_init_matrices(): Batch vector shape: (1728152,)\n",
-      "PhotoNuclearInteractionRate::_init_matrices(): Memory usage after initialization: 988.8565063476562 MB\n",
-      "PhotoNuclearInteractionRate::_init_coupling_mat(): Initiating coupling matrix in (csr) format\n",
-      "SpeciesManager::add_grid(): New grid_tag ph with dimension 72\n",
-      "CPU times: user 2min 17s, sys: 6.94 s, total: 2min 24s\n",
-      "Wall time: 2min\n"
+      "PhotoNuclearInteractionRate::_init_coupling_mat(): Initiating coupling matrix in (CSR) format\n",
+      "CPU times: user 3min 23s, sys: 17.4 s, total: 3min 40s\n",
+      "Wall time: 3min 27s\n"
      ]
     }
    ],
@@ -277,18 +224,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 10.232147932052612 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c396e79ce5f47aeb9cb2b66ef2f6076",
+       "model_id": "d38670fd6e4c4ba38e2dd07e4c8cc4b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -303,8 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 34.050865173339844 s\n"
+      "\n"
      ]
     }
    ],
@@ -324,18 +261,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.435407161712646 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc234c91a71f4a0b9dc2ce8d40ccdde5",
+       "model_id": "73a6f1e7b7be418c9ea972346aec7d0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,8 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 31.63319158554077 s\n"
+      "\n"
      ]
     }
    ],
@@ -371,18 +298,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.357764959335327 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "758d6ce2e80a4d6ea547d4eae71cfbd6",
+       "model_id": "c399efcd7849433880f6ea5c8d1e21ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,8 +315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 31.450026988983154 s\n"
+      "\n"
      ]
     }
    ],
@@ -418,18 +335,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.209194660186768 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "186825287456437e97c8822fcbff06e6",
+       "model_id": "23050f1844f04d58a27dd73401d8dd9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,8 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 33.14898133277893 s\n"
+      "\n"
      ]
     }
    ],
@@ -468,29 +375,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n"
      ]
     },
@@ -566,18 +473,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 9.926656723022461 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 37.02675175666809 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prince_run.set_photon_field(pf_gilmore)\n",
     "\n",
@@ -594,18 +490,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.72505784034729 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07858c390dd34492b58b9e6e6a91f73a",
+       "model_id": "b9f42826ed4e4df7853211ea1ef492f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,8 +507,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 34.15670108795166 s\n"
+      "\n"
      ]
     }
    ],
@@ -641,18 +527,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.418713331222534 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4644cf54b92d4e67b47d756f9abf9a4e",
+       "model_id": "48027183640e44c7a8bededfadd2a224",
        "version_major": 2,
        "version_minor": 0
       },
@@ -667,8 +544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 35.7130491733551 s\n"
+      "\n"
      ]
     }
    ],
@@ -688,18 +564,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n",
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 8.067941427230835 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5dcb38df730494eb7689b39e4ce1b37",
+       "model_id": "9eb0883d16c04ab9b510d64c49d369a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -714,8 +581,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 35.90185213088989 s\n"
+      "\n"
      ]
     }
    ],
@@ -738,29 +604,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n"
      ]
     },
