--- a/Propagate_single_spectrum.ipynb
+++ b/Propagate_single_spectrum.ipynb
@@ -23,12 +23,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PrinceDB::__init__(): Opening HDF5 file prince_db_05.h5\n"
+      "CUPY not found for GPU support. Degrading to MKL.\n"
      ]
     }
    ],
    "source": [
-    "import prince_config\n",
+    "import prince.config\n",
     "from prince import core, util, photonfields, cross_sections\n",
     "from prince import util as pru"
    ]
@@ -65,8 +65,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.48 s, sys: 7.5 s, total: 8.98 s\n",
-      "Wall time: 10.2 s\n"
+      "CPU times: user 1.72 s, sys: 10.2 s, total: 11.9 s\n",
+      "Wall time: 14.4 s\n"
      ]
     }
    ],
@@ -198,41 +198,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Setting up Solver\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000.0 [00:00<?, ?it/s]"
+      "1007it [00:39, 25.82it/s]                           "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UHECRPropagationSolverBDF::solve(): Solver initialized in 10.04527997970581 s\n",
-      "UHECRPropagationSolverBDF::solve(): Starting integration.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1007it [00:37, 26.73it/s]                           "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "UHECRPropagationSolverBDF::solve(): Integration completed in 47.77378225326538 s\n",
-      "CPU times: user 1min 11s, sys: 3.59 s, total: 1min 15s\n",
-      "Wall time: 47.8 s\n"
+      "CPU times: user 1min 11s, sys: 3.45 s, total: 1min 14s\n",
+      "Wall time: 44.3 s\n"
      ]
     },
     {
@@ -288,7 +265,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n"
      ]
     }
@@ -319,17 +296,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: divide by zero encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n"
      ]
     },
@@ -463,11 +440,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:141: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:140: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:149: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:148: RuntimeWarning: invalid value encountered in true_divide\n",
       "  lnA[:, np.newaxis] * spectra).sum(axis=0) / spectra.sum(axis=0)\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:151: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:150: RuntimeWarning: invalid value encountered in true_divide\n",
       "  spectra).sum(axis=0) / spectra.sum(axis=0) - average**2\n"
      ]
     },
@@ -546,11 +523,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:141: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:140: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:149: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:148: RuntimeWarning: invalid value encountered in true_divide\n",
       "  lnA[:, np.newaxis] * spectra).sum(axis=0) / spectra.sum(axis=0)\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:151: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:150: RuntimeWarning: invalid value encountered in true_divide\n",
       "  spectra).sum(axis=0) / spectra.sum(axis=0) - average**2\n"
      ]
     },
@@ -629,9 +606,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: invalid value encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: invalid value encountered in log\n",
       "  np.log(curr_spec),\n",
-      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:121: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/jheinze/python_packages/PriNCe/prince/solvers/propagation.py:120: RuntimeWarning: divide by zero encountered in log\n",
       "  np.log(curr_spec),\n"
      ]
     },
